Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = []\n",
+    "y = []\n",
+    "a = 25\n",
+    "for b in range(10,200):\n",
+    "    x.append(b)\n",
+    "    y.append(comb(a+b, a))\n",
+    "plt.figure(figsize=(8,8))\n",
+    "plt.plot(x,y)\n",
+    "plt.title('Combination Sample Space of a 25 Observation Sample Compared to Various Second Sample Sizes')\n",
+    "plt.xlabel('Size of Second Sample')\n",
+    "plt.ylabel('Number of Combinations for Permutation Test')"
+   ]
   },
   {
    "cell_type": "markdown",
