Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
     "y = []\n",
     "a = 25\n",
     "for b in range(10,200):\n",
-    "    x.append(b)\n",
+    "    x.append(b)  # num of samples \n",
     "    y.append(comb(a+b, a))\n",
     "plt.figure(figsize=(8,8))\n",
     "plt.plot(x,y)\n",
