Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "x = []\n",
     "y = []\n",
-    "a = 25\n",
+    "a = 25  # k samples at a time from b samples \n",
     "for b in range(10,200):\n",
     "    x.append(b)  # num of samples \n",
     "    y.append(comb(a+b, a))\n",
