Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -130,10 +130,10 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "diff_mu_a_b = np.mean(a) - np.mean(b)  # orignal delta\n",
+    "diff_mu_a_b = np.mean(a) - np.mean(b)  # orignal delta_mu\n",
     "num = 0\n",
     "denom = 0\n",
-    "union = a + b\n",
+    "union = a + b  # total sample space \n",
     "for i in range(5*10**6):\n",
     "    #Generate an a\n",
     "    ai = np.random.choice(union, size=len(a), replace=False)\n",
