Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
     "denom = 0\n",
     "union = a + b  # total sample space \n",
     "for i in range(5*10**6):\n",
-    "    #Generate an a\n",
+    "    #Generate an a array from all sample space, no replace\n",
     "    ai = np.random.choice(union, size=len(a), replace=False)\n",
     "    #Generate its compliment as b\n",
     "    bi = union.copy()\n",
