--- a/index.ipynb
+++ b/index.ipynb
@@ -137,8 +137,8 @@
     "for i in range(5*10**6):\n",
     "    #Generate an a array from all sample space, no replace\n",
     "    ai = np.random.choice(union, size=len(a), replace=False)\n",
-    "    #Generate its compliment as b\n",
-    "    bi = union.copy()\n",
+    "    #Generate its compliment as bi is the complement of ai\n",
+    "    bi = union.copy()  # set is mutable \n",
     "    for item in ai:\n",
     "        bi.remove(item)\n",
     "    diff_mu_ai_bi = np.mean(ai) - np.mean(bi)\n",
