Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,6 +141,7 @@
     "    bi = union.copy()  # set is mutable \n",
     "    for item in ai:\n",
     "        bi.remove(item)\n",
+    "    # calculate delta mu for permutated \n",
     "    diff_mu_ai_bi = np.mean(ai) - np.mean(bi)\n",
     "    if diff_mu_ai_bi >= diff_mu_a_b:\n",
     "        num +=1\n",
