--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,7 @@
     "    diff_mu_ai_bi = np.mean(ai) - np.mean(bi)\n",
     "    if diff_mu_ai_bi >= diff_mu_a_b:\n",
     "        num +=1  # num of delta higher than original delta\n",
-    "    denom += 1\n",
+    "    denom += 1  # num of total runs \n",
     "    #Compute difference in means\n",
     "    if i in [10,100,500,1000, 10**4, 10**5, 10**6, 2*10**6, 5*10**6]:\n",
     "        print(\"After {} iterations p-value is: {}\".format(i, num/denom))"
