Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
     "    # calculate delta mu for permutated samples \n",
     "    diff_mu_ai_bi = np.mean(ai) - np.mean(bi)\n",
     "    if diff_mu_ai_bi >= diff_mu_a_b:\n",
-    "        num +=1  # num of delta higher than original delta\n",
+    "        num +=1  # num of delta higher or equal than original delta\n",
     "    denom += 1  # num of total runs \n",
     "    #Compute difference in means\n",
     "    if i in [10,100,500,1000, 10**4, 10**5, 10**6, 2*10**6, 5*10**6]:\n",
