Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,7 +148,8 @@
     "    denom += 1  # num of total runs \n",
     "    #Compute difference in means\n",
     "    if i in [10,100,500,1000, 10**4, 10**5, 10**6, 2*10**6, 5*10**6]:\n",
-    "        print(\"After {} iterations p-value is: {}\".format(i, num/denom))"
+    "        print(\"After {} iterations p-value is: {}\".format(i, num/denom))\n",
+    "        "
    ]
   },
   {
