Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After 10 iterations p-value is: 1.0\n",
+      "After 100 iterations p-value is: 1.0\n",
+      "After 500 iterations p-value is: 1.0\n",
+      "After 1000 iterations p-value is: 0.999000999000999\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
     "diff_mu_a_b = np.mean(a) - np.mean(b)  # orignal delta_mu\n",
@@ -149,7 +160,7 @@
     "    #Compute difference in means\n",
     "    if i in [10,100,500,1000, 10**4, 10**5, 10**6, 2*10**6, 5*10**6]:\n",
     "        print(\"After {} iterations p-value is: {}\".format(i, num/denom))\n",
-    "        "
+    "# prob of occurence of detla orignal mu in all sample space if same distribution        "
    ]
   },
   {
